lib/src/bindings.dart


  /// Opens an new file for writing. Warning: an already existing file with the same name will be silently overwritten without advance warning!<br>
  /// This function is required if you want to write a file (or use edfopen_file_writeonly_with_params())
  ///
  /// @param[in] path
  /// A null-terminated string containing the path and name of the file
  ///
  /// @param[in] filetype
  /// Must be EDFLIB_FILETYPE_EDFPLUS or EDFLIB_FILETYPE_BDFPLUS.
  ///
  /// @param[in] number_of_signals
  /// The number of signals you want to store into the file<br>
  /// (excluding annotation signals, the library will take care of that).
  ///
  /// @return
  /// A file handle on success or a negative number in case of an error:
  /// - EDFLIB_MALLOC_ERROR
  /// - EDFLIB_NO_SUCH_FILE_OR_DIRECTORY
  /// - EDFLIB_MAXFILES_REACHED
  /// - EDFLIB_FILE_ALREADY_OPENED
  /// - EDFLIB_NUMBER_OF_SIGNALS_INVALID
  /// - EDFLIB_ARCH_ERROR
  int open_file_writeonly(
    ffi.Pointer<ffi.Char> path,
    int filetype,
    int number_of_signals,
  ) {
    return _open_file_writeonly(
      path,
      filetype,
      number_of_signals,
    );
  }

  late final _open_file_writeonlyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Int)>>('edfopen_file_writeonly');
  late final _open_file_writeonly = _open_file_writeonlyPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int, int)>();

  /// This is a convenience function that can create a new EDF file and initializes the most important parameters.<br>
  /// It assumes that all signals are sharing the same parameters (you can still change them though).<br>
  /// Warning: an already existing file with the same name will be silently overwritten without advance warning!<br>
  ///
  /// @param[in] path
  /// A null-terminated string containing the path and name of the file.
  ///
  /// @param[in] filetype
  /// Must be EDFLIB_FILETYPE_EDFPLUS or EDFLIB_FILETYPE_BDFPLUS.
  ///
  /// @param[in] number_of_signals
  /// The number of signals you want to store into the file<br>
  /// (excluding annotation signals, the library will take care of that).
  ///
  /// @param[in] samplefrequency
  /// Sample frequency for all signals. (In reality, it sets the number of samples per datarecord which equals the sample frequency only when<br>
  /// the datarecords have a duration of one second which is the default here.)
  ///
  /// @param[in] phys_max_min
  /// Physical maximum and minimum for all signals.
  ///
  /// @param[in] phys_dim
  /// Pointer to a NULL-terminated ASCII-string containing the physical dimension (unit) for all signals ("uV", "BPM", "mA", "Degr.", etc.).
  ///
  /// @return
  /// A file handle on success or a negative number in case of an error:
  /// - EDFLIB_MALLOC_ERROR
  /// - EDFLIB_NO_SUCH_FILE_OR_DIRECTORY
  /// - EDFLIB_MAXFILES_REACHED
  /// - EDFLIB_FILE_ALREADY_OPENED
  /// - EDFLIB_NUMBER_OF_SIGNALS_INVALID
  /// - EDFLIB_ARCH_ERROR
  int open_file_writeonly_with_params(
    ffi.Pointer<ffi.Char> path,
    int filetype,
    int number_of_signals,
    int samplefrequency,
    double phys_max_min,
    ffi.Pointer<ffi.Char> phys_dim,
  ) {
    return _open_file_writeonly_with_params(
      path,
      filetype,
      number_of_signals,
      samplefrequency,
      phys_max_min,
      phys_dim,
    );
  }

  late final _open_file_writeonly_with_paramsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Pointer<ffi.Char>)>>('edfopen_file_writeonly_with_params');
  late final _open_file_writeonly_with_params =
      _open_file_writeonly_with_paramsPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, int, int, int, double,
              ffi.Pointer<ffi.Char>)>();

  /// Sets the sample frequency of signal edfsignal. In reality, it sets the number of samples in a datarecord<br>
  /// which equals the sample frequency only when the datarecords have a duration of one second.<br>
  /// The effective sample frequency is: samplefrequency / datarecord duration<br>
  /// This function is required for every signal (except when using edfopen_file_writeonly_with_params()) and can be called<br>
  /// only after opening a file in write mode and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] samplefrequency
  /// Sample frequency, must be > 0;
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_samplefrequency(
    int handle,
    int edfsignal,
    int samplefrequency,
  ) {
    return _set_samplefrequency(
      handle,
      edfsignal,
      samplefrequency,
    );
  }

  late final _set_samplefrequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'edf_set_samplefrequency');
  late final _set_samplefrequency =
      _set_samplefrequencyPtr.asFunction<int Function(int, int, int)>();

  /// Sets the maximum physical value of signal edfsignal. (the value of the input of the ADC when the output equals the value of "digital maximum")<br>
  /// It is the highest value that the equipment is able to record. It does not necessarily mean the signal recorded reaches this level.<br>
  /// In other words, it is the highest value that CAN occur in the recording.<br>
  /// Must be un-equal to physical minimum.<br>
  /// This function is required for every signal (except when using edfopen_file_writeonly_with_params()) and can be called<br>
  /// only after opening a file in write mode and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] phys_max
  /// Physical maximum, must be != physical minimum;
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_physical_maximum(
    int handle,
    int edfsignal,
    double phys_max,
  ) {
    return _set_physical_maximum(
      handle,
      edfsignal,
      phys_max,
    );
  }

  late final _set_physical_maximumPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Double)>>(
      'edf_set_physical_maximum');
  late final _set_physical_maximum =
      _set_physical_maximumPtr.asFunction<int Function(int, int, double)>();

  /// Sets the minimum physical value of signal edfsignal. (the value of the input of the ADC when the output equals the value of "digital minimum")<br>
  /// It is the lowest value that the equipment is able to record. It does not necessarily mean the signal recorded reaches this level.<br>
  /// In other words, it is the lowest value that CAN occur in the recording.<br>
  /// Must be un-equal to physical maximum.<br>
  /// This function is required for every signal (except when using edfopen_file_writeonly_with_params()) and can be called<br>
  /// only after opening a file in write mode and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] phys_min
  /// Physical minimum, must be != physical maximum;
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_physical_minimum(
    int handle,
    int edfsignal,
    double phys_min,
  ) {
    return _set_physical_minimum(
      handle,
      edfsignal,
      phys_min,
    );
  }

  late final _set_physical_minimumPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Double)>>(
      'edf_set_physical_minimum');
  late final _set_physical_minimum =
      _set_physical_minimumPtr.asFunction<int Function(int, int, double)>();

  /// Sets the maximum digital value of signal edfsignal. The maximum value is 32767 for EDF+ and 8388607 for BDF+.<br>
  /// It is the highest value that the equipment is able to record. It does not necessarily mean the signal recorded reaches this level.<br>
  /// In other words, it is the highest value that CAN occur in the recording.<br>
  /// Must be higher than digital minimum.<br>
  /// This function is required for every signal (except when using edfopen_file_writeonly_with_params()) and can be called<br>
  /// only after opening a file in write mode and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] dig_max
  /// Digital maximum, must be > digital minimum;
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_digital_maximum(
    int handle,
    int edfsignal,
    int dig_max,
  ) {
    return _set_digital_maximum(
      handle,
      edfsignal,
      dig_max,
    );
  }

  late final _set_digital_maximumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'edf_set_digital_maximum');
  late final _set_digital_maximum =
      _set_digital_maximumPtr.asFunction<int Function(int, int, int)>();

  /// Sets the minimum digital value of signal edfsignal. The minimum value is -32768 for EDF+ and -8388608 for BDF+.<br>
  /// It is the lowest value that the equipment is able to record. It does not necessarily mean the signal recorded reaches this level.<br>
  /// In other words, it is the lowest value that CAN occur in the recording.<br>
  /// Must be lower than digital maximum.<br>
  /// This function is required for every signal (except when using edfopen_file_writeonly_with_params()) and can be called<br>
  /// only after opening a file in write mode and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] dig_min
  /// Digital minimum, must be < digital maximum;
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_digital_minimum(
    int handle,
    int edfsignal,
    int dig_min,
  ) {
    return _set_digital_minimum(
      handle,
      edfsignal,
      dig_min,
    );
  }

  late final _set_digital_minimumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'edf_set_digital_minimum');
  late final _set_digital_minimum =
      _set_digital_minimumPtr.asFunction<int Function(int, int, int)>();

  /// Sets the label (name) of signal \p edfsignal. ("EEG FP1", "SaO2", etc.).<br>
  /// This function is recommended for every signal when you want to write a file<br>
  /// and can be called only after opening a file in write mode and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @param[in] label
  /// A pointer to a NULL-terminated ASCII-string containing the label (name) of the signal \p edfsignal.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_label(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _set_label(
      handle,
      edfsignal,
      label,
    );
  }

  late final _set_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('edf_set_label');
  late final _set_label =
      _set_labelPtr.asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();
